# powertrain-anomaly-detection

./: README.md  pyproject.toml  requirements.txt
checkpoints/: tcn_ae_0.pt  tcn_ae_1.pt  tcn_ae_2.pt  tcn_ae_3.pt  tcn_ae_4.pt
scripts/: generate_synthetic_drives.py  live_demo.py  run_experiment.py  run_experiments.py  run_tcn_experiments.py
src/powertrain_anomaly_detection/: __init__.py  data.py  experiments.py  models.py  plots.py  selector.py  training.py
src/pt_ad/: config.py  plots.py  preprocessing.py
