[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powertrain_anomaly_detection"
version = "0.1.0"
description = "Conv1D / TCN autoencoder framework for synthetic powertrain anomaly detection."
authors = [
    {name = "Peyton Schmid"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "scikit-learn",
    "pyarrow",
    "requests",
]

[tool.setuptools]
# critical for src/ layout
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["powertrain_anomaly_detection*"]
